# carlos-council

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  config.py  conftest.py  database.py  dossier.py  main.py  memory.py  models.py  orchestrator.py  pyproject.toml  requirements.txt  session.py  streaming.py
backend/agents/: __init__.py  base.py  carlos.py  field_operator.py  growth_hunter.py  product_architect.py  revenue_strategist.py  storyteller.py
backend/prompts/: carlos.md  field_operator.md  growth_hunter.md  lesson_extraction.md  phase_debate.md  phase_final.md  phase_synthesis.md  product_architect.md  revenue_strategist.md  storyteller.md
backend/scripts/: import_business_dossier.py
backend/tests/: test_api.py  test_dossier.py  test_models.py  test_orchestrator_parsing.py  test_orchestrator_run.py
docs/: ASSET_GENERATION_PLAN.md  CARLOS_ASSET_PROMPTS.md  CODEX_REVIEW_PROMPT.md  IMPLEMENTATION_PLAN.md  LAUNCH_POSTS.he.md  LAUNCH_POSTS.md  RELEASE_CHECKLIST.md  SECURITY_AUDIT.md  STATE_OF_REPO.md  UX_UI_REVIEW.md
examples/: business-dossier.example.md
frontend/: .dockerignore  Dockerfile  README.md  package-lock.json  package.json
frontend/scripts/brand/: carlos-assets.manifest.json  carlos-og-overlay.mjs  generate-brand-assets.js  generate-carlos-assets.mjs
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: AgentCard.tsx  AgentStream.tsx  AppHeader.tsx  BriefForm.tsx  ClarificationForm.tsx  ClientMarkdown.tsx  (+10 more)
(+9 files in other folders)
